[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ms41-bsl-unbrick"
dynamic = ["version"]
description = "In-circuit recovery of the Intel 28F200 flash on a BMW MS41 ECU over the 80C166 bootstrap loader (BSL)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "CAATZ" }]
keywords = ["BMW", "MS41", "ECU", "80C166", "28F200", "BSL", "flash", "unbrick"]
dependencies = ["pyserial>=3.5"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Embedded Systems",
]

[project.urls]
Homepage = "https://github.com/CAATZ/MS41-BSL-Unbricker"
Repository = "https://github.com/CAATZ/MS41-BSL-Unbricker"

[project.scripts]
ms41-bsl-unbrick = "bsl_unbrick:main"

[tool.setuptools]
py-modules = ["bsl_unbrick", "ms41_variant", "ms41_checksum"]

[tool.setuptools.dynamic]
version = { attr = "bsl_unbrick.__version__" }
